# openproject-bot

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  openproject_discord_llm_implementation_plan.md  pyproject.toml
app/: config.py  main.py
app/api/: admin.py  discord.py  health.py
app/core/: exceptions.py  metrics.py  security.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial.py
app/discord/: commands.py  components.py  responses.py  verify.py  webhook.py
app/llm/: client.py  examples.py  parser.py  prompts.py  schemas.py
app/openproject/: client.py  mapper.py  mcp_client.py  metadata.py  schemas.py  validator.py
app/services/: audit.py  command_router.py  confirm_action.py  create_issue.py  sync_metadata.py
app/tests/: conftest.py
app/tests/unit/: test_create_issue_service.py  test_mapper.py  test_parser_fallback.py  test_validator.py
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  deployment.md  nginx-bot.conf  runbooks.md
scripts/: register_discord_commands.py  smoke_test.py  sync_openproject_metadata.py
